--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "postcss-normalize": "7.0.1",
     "postcss-preset-env": "6.6.0",
     "postcss-safe-parser": "4.0.1",
+    "randomstring": "^1.1.5",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
     "react-bootstrap": "^1.0.0-beta.9",
@@ -52,6 +53,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.1",
+    "redux-saga": "^1.1.1",
     "redux-thunk": "^2.3.0",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
